--- a/index.html
+++ b/index.html
@@ -9,6 +9,39 @@
 <body>
   <div class="container">
     <h1>Project: Calculator</h1>
+    <div class="calculator">
+      <input type="text" id="display" class="display" placeholder="12 + 13">
+      <div class="buttonContainer">
+        <div class="row one">
+          <button title="" type="button" class="widebutton" id="clear">Clear</button>
+          <button title="" type="button" class="widebutton" id="backspace">Backspace</button>
+        </div>
+        <div class="row two">
+          <button title="" type="button" class="">1</button>
+          <button title="" type="button" class="">2</button>
+          <button title="" type="button" class="">3</button>
+          <button title="" type="button" class="">+</button>
+        </div>
+        <div class="row three">
+          <button title="" type="button" class="">4</button>
+          <button title="" type="button" class="">5</button>
+          <button title="" type="button" class="">6</button>
+          <button title="" type="button" class="">-</button>
+        </div>
+        <div class="row four">
+          <button title="" type="button" class="">7</button>
+          <button title="" type="button" class="">8</button>
+          <button title="" type="button" class="">9</button>
+          <button title="" type="button" class="">*</button>
+        </div>
+        <div class="row five">
+          <button title="" type="button" class="">.</button>
+          <button title="" type="button" class="">0</button>
+          <button title="" type="button" class="">=</button>
+          <button title="" type="button" class="">/</button>
+        </div>
+      </div>
+    </div>
   </div>
   <script src="js/script.js"></script>
 </body>
