--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
           <button title="" type="button" class="">1</button>
           <button title="" type="button" class="">2</button>
           <button title="" type="button" class="">3</button>
-          <button title="" type="button" class="">+</button>
+          <button title="" type="button" class="operator">+</button>
         </div>
         <div class="row three">
           <button title="" type="button" class="">4</button>
           <button title="" type="button" class="">5</button>
           <button title="" type="button" class="">6</button>
-          <button title="" type="button" class="">-</button>
+          <button title="" type="button" class="operator">-</button>
         </div>
         <div class="row four">
           <button title="" type="button" class="">7</button>
           <button title="" type="button" class="">8</button>
           <button title="" type="button" class="">9</button>
-          <button title="" type="button" class="">*</button>
+          <button title="" type="button" class="operator">*</button>
         </div>
         <div class="row five">
           <button title="" type="button" class="">.</button>
           <button title="" type="button" class="">0</button>
-          <button title="" type="button" class="">=</button>
-          <button title="" type="button" class="">/</button>
+          <button title="" type="button" class="equals">=</button>
+          <button title="" type="button" class="operator">/</button>
         </div>
       </div>
     </div>
