--- a/index.html
+++ b/index.html
@@ -10,35 +10,35 @@
   <div class="container">
     <h1>Project: Calculator</h1>
     <div class="calculator">
-      <input type="text" id="display" class="display" placeholder="12 + 13">
+      <input type="text" id="display" class="display" placeholder="0">
       <div class="buttonContainer">
         <div class="row one">
-          <button title="" type="button" class="widebutton" id="clear">Clear</button>
-          <button title="" type="button" class="widebutton" id="backspace">Backspace</button>
+          <button type="button" class="widebutton" id="clear">Clear</button>
+          <button type="button" class="widebutton" id="backspace">Backspace</button>
         </div>
         <div class="row two">
-          <button title="" type="button" class="">1</button>
-          <button title="" type="button" class="">2</button>
-          <button title="" type="button" class="">3</button>
-          <button title="" type="button" class="operator">+</button>
+          <button type="button" class="numbers">1</button>
+          <button type="button" class="numbers">2</button>
+          <button type="button" class="numbers">3</button>
+          <button type="button" class="operator">+</button>
         </div>
         <div class="row three">
-          <button title="" type="button" class="">4</button>
-          <button title="" type="button" class="">5</button>
-          <button title="" type="button" class="">6</button>
-          <button title="" type="button" class="operator">-</button>
+          <button type="button" class="numbers">4</button>
+          <button type="button" class="numbers">5</button>
+          <button type="button" class="numbers">6</button>
+          <button type="button" class="operator">-</button>
         </div>
         <div class="row four">
-          <button title="" type="button" class="">7</button>
-          <button title="" type="button" class="">8</button>
-          <button title="" type="button" class="">9</button>
-          <button title="" type="button" class="operator">*</button>
+          <button type="button" class="numbers">7</button>
+          <button type="button" class="numbers">8</button>
+          <button type="button" class="numbers">9</button>
+          <button type="button" class="operator">*</button>
         </div>
         <div class="row five">
-          <button title="" type="button" class="">.</button>
-          <button title="" type="button" class="">0</button>
-          <button title="" type="button" class="equals">=</button>
-          <button title="" type="button" class="operator">/</button>
+          <button type="button" class="decimal">.</button>
+          <button type="button" class="numbers">0</button>
+          <button type="button" class="equals">=</button>
+          <button type="button" class="operator">/</button>
         </div>
       </div>
     </div>
